# tictactoe

./: app.py  pyproject.toml
static/stylesheets/: application.css
templates/: home.html  layout.html  play.html
tictactoe/: utils.py
