[tool.poetry]
name = "tictactoe"
version = "0.1.0"
description = "A simple browser Tic-Tac-Toe game"
authors = ["Seth Roberts <sethknock@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"